# fauth

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  main.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/actions/setup-python-env/: action.yml
.github/workflows/: cicd.yml  pre-commit-autoupdate.yml  semgrep.yml  snyk.yml
docs/: PLAN.md  api-reference.md  authentication.md  authorization.md  changelog.md  crypto.md  error-handling.md  getting-started.md  index.md  logging.md  plan.md  secure-router.md  testing.md  transports.md
fauth/: __init__.py  jwt.py  protocols.py  provider.py  py.typed  router.py  schemas.py
fauth/api/: __init__.py  router.py
fauth/core/: __init__.py  config.py  exceptions.py  schemas.py
fauth/crypto/: __init__.py  jwt.py  password.py
fauth/middleware/: auth.py
fauth/providers/: __init__.py  field_names.py  protocols.py  provider.py
fauth/testing/: __init__.py  config.py  fakes.py  provider.py
fauth/transports/: __init__.py  base.py  bearer.py
fauth/utils/: __init__.py  logging.py
tests/: conftest.py
tests/api/: conftest.py  test_openapi.py  test_router.py
tests/core/: conftest.py  test_config.py  test_exceptions.py
tests/crypto/: conftest.py  test_jwt.py  test_password.py
tests/middleware/: conftest.py  test_auth_middleware.py
tests/providers/: conftest.py  test_provider.py
tests/testing/: test_testing.py
tests/utils/: conftest.py  test_logging.py
