[project]
name = "fauth"
version = "0.4.0"
description = "Ergonomic, lightweight JWT authentication for FastAPI. Secure your routes instantly with plug-and-play dependency injection"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Matias Gimenez", email = "matiasgimenez.dev@gmail.com" }]
keywords = ["fastapi", "authentication", "jwt", "rbac", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Typing :: Typed",
]
dependencies = [
    "fastapi>=0.100",
    "pyjwt[crypto]>=2.8",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "pwdlib[argon2]>=0.2",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=7.0.0",
    "pytest-sugar>=1.1.1",
    "poethepoet>=0.37",
    "pre-commit>=4.4",
    "httpx>=0.28.1",
    "polyfactory>=3.3.0",
]

[project.urls]
Homepage = "https://github.com/justmatias/fauth"
Repository = "https://github.com/justmatias/fauth"
Issues = "https://github.com/justmatias/fauth/issues"
Changelog = "https://github.com/justmatias/fauth/blob/main/CHANGELOG.md"
Documentation = "https://github.com/justmatias/fauth/blob/main/README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fauth"]

##################################
# ruff configuration             #
##################################

[tool.ruff]
line-length = 88
exclude = [
  ".git",
  ".mypy_cache",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".venv",
  ".vscode",
  "_build",
  "buck-out",
  "build",
  "dist",
  "playground",
  "site-packages",
  "venv",
]

preview = true
fix = true
format.indent-style = "space"
format.quote-style = "double"
format.line-ending = "auto"
format.skip-magic-trailing-comma = false
ignore=["UP046", "PLC0105", "B008"]

##################################
# mypy configuration             #
##################################

[tool.mypy]
python_version = "3.13"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
disable_error_code = ["var-annotated"]


##################################
# pylint configuration           #
##################################

[tool.pylint]
disable = [
  "missing-docstring",
  "missing-module-docstring",
  "missing-function-docstring",
  "arguments-renamed",
  "too-few-public-methods",
  "astroid-error",
  "consider-using-assignment-expr",
  "redefined-outer-name",
  "broad-exception-caught",
  "import-error",
  "invalid-name",
  "no-value-for-parameter",
  "unnecessary-ellipsis",
  "typevar-name-incorrect-variance",
]
extension-pkg-allow-list = ["dependency_injector"]
generated-members = ["dependency_injector.*"]
load-plugins = [
  "pylint.extensions.bad_builtin",
  "pylint.extensions.code_style",
  "pylint.extensions.comparison_placement",
  "pylint.extensions.consider_refactoring_into_while_condition",
  "pylint.extensions.dunder",
  "pylint.extensions.eq_without_hash",
  "pylint.extensions.for_any_all",
  "pylint.extensions.mccabe",
  "pylint.extensions.no_self_use",
  "pylint.extensions.overlapping_exceptions",
  "pylint.extensions.private_import",
  "pylint.extensions.redefined_loop_name",
  "pylint.extensions.set_membership",
]

[tool.poe.tasks]
format = "pre-commit run --all-files --verbose"
build = "pip install -e ."
test = "pytest -s --cov=fauth --cov-report=term-missing:skip-covered"

##################################
# semantic release configuration #
##################################

[tool.semantic_release]
branch = "main"
commit_message = "chore(release): release version {version}"
version_toml = ["pyproject.toml:project.version"]

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_author]
env = "GIT_COMMIT_AUTHOR"
default = "semantic-release <semantic-release>"

[tool.semantic_release.changelog.environment]
block_start_string = "{%"
block_end_string = "%}"
variable_start_string = "{{"
variable_end_string = "}}"
comment_start_string = "{#"
comment_end_string = "#}"
trim_blocks = false
lstrip_blocks = false
newline_sequence = "\n"
keep_trailing_newline = false
extensions = []
autoescape = true

[tool.semantic_release.commit_parser_options]
allowed_tags = ["chore", "docs", "feat", "fix", "refactor"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
default_bump_level = 0

[tool.semantic_release.remote]
name = "origin"
type = "github"
ignore_token_for_push = false
insecure = false

##################################
# pytest configuration           #
##################################

[tool.coverage.run]
source = ["fauth"]
omit = ["fauth/__init__.py"]
